src/App.css
.background {
    background: linear-gradient(rgba(0, 39, 11, 0.595), rgba(22, 0, 0, 0.8)), url('./assets/home-wallpaper.jpg');
    width: 100vh;
    height: 750px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

.main-text {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    color: white;
    text-align: center;
}

.loader {
    margin-top: 5px;
    width: 100%;
    padding-left: 48%;
}

.menuList {
    margin-left: 1px;
    margin-bottom: 5px;
}

.display {
    margin-left: 5px;
    margin-bottom: 5px;
}

.singleGameCard {
    height: 680px;
    width: 450px;
    margin-left:30%
}

.singleGameImage {
    height: 590px;
    width: 450px;
}

/* Use a media query to add a breakpoint at 800px: */
@media screen and (max-width: 580px) {
    .gameImage {
        height: 300px;
        width: 280px;
    }

    .gameCard {
        height: 410px;
        width: 280px;
    }
    .singleGameCard {
        height: 410px;
        width: 280px;
        margin-left: 0%;
    }
    
    .singleGameImage {
        height: 300px;
        width: 280px;
    }   
}

@media screen and (min-width: 581px) {
    .gameImage {
        height: 300px;
        width: 280px;
    }
    .gameCard {
        height: 410px;
        width: 280px;
    }
    .singleGameCard {
        height: 410px;
        width: 280px;
        margin-left: 0%;
    }
    
    .singleGameImage {
        height: 300px;
        width: 280px;
    }  
}

@media screen and (min-width: 980px) {
    .gameImage {
        height: 360px;
        width: 320px;
    }

    .gameCard {
        height: 510px;
        width: 320px;
    }
    .singleGameCard {
        height: 680px;
        width: 450px;
        margin-left:30%
    }
    
    .singleGameImage {
        height: 590px;
        width: 450px;
    }
}

@media screen and (min-width: 981px) and (max-width: 1280px) {
    .gameImage {
        height: 400px;
        width: 360px;
    }

    .gameCard {
        height: 510px;
        width: 360px;
    }
    .singleGameCard {
        height: 680px;
        width: 450px;
        margin-left:30%
    }
    
    .singleGameImage {
        height: 590px;
        width: 450px;
    }
}

